# glip

./: .gitignore  README.md
apps/api/: Cargo.toml
apps/api/src/: analysis.rs  glily.rs  glino.rs  main.rs  ops.rs
apps/frontend/: README.md  package.json  svelte.config.js  vite.config.ts
apps/frontend/src/: app.css
apps/frontend/src/lib/: AnalysisViewer.svelte  AudioEngine.ts  DropZone.svelte  VectorSpace.svelte  Waveform.svelte
apps/frontend/src/routes/: +layout.svelte  +page.svelte
apps/glily/: package.json  parser.ts
config/: glip-local.fish
configs/: Caddyfile  glip-local.fish
configs/systemd/: glip-api.service  glip-frontend.service  glip-pocketbase.service
data/obsidian/: 0a0cd2bc-bb4.md  2634f315-f0e.md  4f4ec969-19b.md  5c29ae1a-020.md  5fd7654b-2ed.md  6453e6af-36e.md  a3940b17-3fe.md  ac508662-d1b.md  b02a0599-2a2.md  b5336e62-66a.md  b80bfda7-4a7.md  c16c0a32-e1b.md  c9f962e0-436.md  dacea6ab-2af.md  e7a39f67-684.md  fdf72474-18e.md  fe4d2060-999.md  unknown.md
docs/: 00-glip-setup.md  01-glip.md  02-glino.md  03-glily.md  04-rust-api-init.md  fixed.md  session-2026-04-07.md  yaml-master.md
schemas/: tae.schema.json
scripts/: create_tae_collection.py  ingest.py
