[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
regex = "1"
serde_yaml = "0.9"
futures = "0.3"
